# python-template

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  cookiecutter.json  mypy.ini  pyproject.template.toml  pyproject.toml  requirements-dev.txt  setup_project.py
hooks/: post_gen_project.py
src/hello/: __init__.py  hello.py  hello_test.py
src/main/: main.py  main_test.py
src/python_template/: main.py
tests/: test_main.py
tests/main/: test_main.py
{{ cookiecutter.package_name }}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{ cookiecutter.package_name }}/tests/: test_main.py
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  LICENSE.txt  pyproject.toml  requirements-dev.txt
{{ cookiecutter.project_slug }}/tests/: test_main.py
