[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
authors = [
    { name = "fred-si", email = "fred-si@zaclys.net" },
]
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = []

[project.optional-dependencies]
dev = [
    # Tests
    "pytest==8.*",
    "pytest-cov==6.*",

    # Lint
    "mypy==1.*",
    "ruff==0.*",

    # Misc
    "pre-commit==4.*",
    "black==25.*",
]

[project.scripts]
hello = "{{ cookiecutter.package_name }}:main"

[project.urls]
"Homepage" = "https://github.com/fred-si/{{ cookiecutter.project_slug }}"
"Bug Tracker" = "https://github.com/fred-si/{{ cookiecutter.project_slug }}/issues"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = [
    "--doctest-modules",
]
norecursedirs = [
    "dist",
    "build",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".github",
]

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
strict = true
exclude = [
    "^(data|build|venv|alembic)/$",
    '^(^\.mypy_cache|\.pytest_cache|\.ruff_cache)/$'
]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["method-assign"] # in test, we want to be able to mock instance methods

[tool.ruff]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    "COM812", # trailing comma. This is managed by black
    "D10", # missing docstring
    "D203", # one blank line before class docstring
    "D213", # multi-line summary first line
    "ANN", # type annotation
    "T20", # print/pprint
    "I001", # import sort/formating
    "DTZ001",
    "DTZ005",
    "DTZ006",
    "PLC0414", # useless-import-alias
]
allowed-confusables = ["’"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"test_*.py" = [
    "S101", # assert
    "PLR2004", # missing-type-self
    "E501", # line-too-long
]
"src/conftest.py" = [
    "INP001", # add __init__.py
]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.isort]
lines-between-types = 1
order-by-type = true

[tool.black]
target-version = ["py{{ cookiecutter.python_version.replace('.', '') }}"]
line-length = 80
skip-magic-trailing-comma = true

[tool.coverage.run]
omit = [
    "tests/*",
    "alembic/*",
    "venv/*",
    "data/*",
    ".pytest_cache/*",
    ".mypy_cache/*",
    ".ruff_cache/*",
]
branch = true

[tool.coverage.report]
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    # Don't complain if non-runnable code isn't run:
    "if TYPE_CHECKING:",
    "assert_never",
    "@overload",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
